--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,16 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "@supabase/supabase-js": "^2.76.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": "22.x"
