--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,6 @@
     "private": true,
     "dependencies": {
         "@types/jest": "^29.5.8",
-        "@types/node": "^20.9.0",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
         "react": "^18.2.0",
@@ -14,11 +11,14 @@
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.12.0",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^6.18.0",
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.2",
         "redux": "^4.2.1",
-        "typescript": "^5.2.2",
+        "rehype-raw": "^7.0.0",
+        "rehype-sanitize": "^6.0.0",
+        "remark-gfm": "^4.0.1",
         "typewriter-effect": "^2.18.2",
         "web-vitals": "^3.1.1"
     },
