--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-API_KEY=hello123
+# Development environment
+REACT_APP_API_URL=http://localhost:3003/api
+REACT_APP_API_KEY=hello123
+
+# For production, Vercel will use environment variables set in dashboard
